bk_ida/gobmkida/g1/sgffile_begindump
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/sgffile_begindump/src/engine/sgffile.c:591:7: error: use of undeclared identifier 'local_tree_0'
v2 = &local_tree_0; 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/sgffile_begindump/src/engine/sgffile.c:594:57: error: too many arguments to function call, expected 3, have 4
sgftreeCreateHeaderNode( sgf_dumptree, board_size, 0.0, v1); 
~~~~~~~~~~~~~~~~~~~~~~~                                 ^~
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/sgffile_begindump/src/include/sgftree.h:155:1: note: 'sgftreeCreateHeaderNode' declared here
void sgftreeCreateHeaderNode(SGFTree *tree, int boardsize, float komi);
^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/sgffile_begindump/src/obj/1/sgffile.o] Error 1
